# myTest

./: CMakeLists.txt  main.cpp  test.ini
armadillo-7.200.2/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.so.7  libarmadillo.so.7.200.2
armadillo-7.200.2/InstallFiles/: ArmadilloConfigVersion.cmake
armadillo-7.200.2/examples/: example1
armadillo-7.200.2/tmp/include/armadillo_bits/: config.hpp
myLib/: armadiloTest.cpp
myLib/Lapackpp1.1a/: makefile  makefile.def
myLib/Lapackpp1.1a/blaspp/src/: blas1++.cc  blas2++.cc  blas3++.cc  makefile
myLib/Lapackpp1.1a/blaspp/testing/: blas++_test  makefile  tblasd++.cc
myLib/Lapackpp1.1a/include/: arch.h  bfd.h  blas++.h  blas1++.h  blas1.h  blas2++.h  blas2.h  blas3++.h  blas3.h  bmd.h  f2c.h  fmd.h  genmd.h  gfd.h  gmc.h  gmd.h  gmf.h  gmi.h  gmli.h  lacvd.h  laexcp.h  lafnames.h  lapack++.h  lapackd.h  larvd.h  lautil.h  lavc.h  lavd.h  lavf.h  lavi.h  lavli.h  ltgmd.h  spdbmd.h  spdmd.h  spdtrmd.h  sybmd.h  syfd.h  symd.h  template_v.h  trfd.h  (+5 more)
myLib/Lapackpp1.1a/matrix/src/: gmd.cc  gmf.cc  gmi.cc  gmli.cc  index.cc  lamatrix.rsp  lavd.cc  lavli.cc  ltgmd.cc  makefile  spdmd.cc  symd.cc  ultgmd.cc  utgmd.cc  uutgmd.cc  vd.cc  vf.cc  vli.cc
myLib/Lapackpp1.1a/matrix/testing/: makefile  matrix_test  tbd.cc  tcvd.cc  (+16 more)
myLib/Lapackpp1.1a/src/: dopla.c  dtimmg.c  eigslv.cc  lautil.cc  linslv.cc  makefile  systime.c
myLib/Lapackpp1.1a/testing/: makefile  tEigSolve.cc  tGenSolve.cc  tSpdSolve.cc  tSymmSolve.cc  tutil.cc
myLib/gnuplot-iostream/: example-misc.cc
myLib/simpleini-master/: SimpleIni.h  test1-expected.ini
src/: Mirror.cpp  Mirror.h
